--- a/index_style.css
+++ b/index_style.css
@@ -20,23 +20,35 @@ body {
 }
 
 #tela-recursos {
-    padding: 100px 50px 0;
+    padding: 200px 50px 0;
     height: 1080px;
     color: #1A1A1A;
 }
 
 #tela-recursos .btn {
-    border-radius: 18px;
+    border-radius: 25px;
     background-image: linear-gradient(to right, rgb(30, 113, 227), rgb(56, 151, 241));
     text-decoration: none;
-    padding: 4px 17px;
-    font-size: 15px;
+    padding: 7px 25px;
+    font-size: 16px;
     color: white;
-    font-weight: 400;
+    font-weight: 450;
+}
+
+.timeline-nav a {
+    color: green;
+    font-size: 13px;
+    margin-right: 20px;
+}
+
+.timeline-nav a:active {
+    color: red;
+    font-size: 13px;
+    margin-right: 20px;
 }
 
 #tela-integracao {
-    background-color: #EEEEEE;
+    background-color: #1A1A1A;
     padding: 182px 50px 0;
     height: 1920px;
 }
