Animações tela inicio

--- a/index_style.css
+++ b/index_style.css
@@ -3,11 +3,18 @@ body {
 }
 
 /* tela-inicial */
+@keyframes radialAnimation {
+    to {
+      background-position:80% 0%;
+    }
+   }
+
 #tela-inicial {
-    height: 1080px;
-    background-image: radial-gradient(rgb(11, 16, 23), rgb(6, 25, 35));
+    height: 100%;
+    background: radial-gradient(circle farthest-corner at 70% 10%, #0c0f16 23%, #003c5f 50%) top right/200% 200%;
     color: white;
     padding: 30px 25px 0px;
+    animation: radialAnimation 7s ease-in-out infinite alternate;
 }
 
 #tela-inicial h1 {
@@ -33,6 +40,35 @@ body {
     font-size: 13px;
     color: white;
     font-weight: 400;
+}
+
+.img-relatorio {
+    z-index: 1;
+    max-width: 40%;
+}
+
+#imgRelatorioVendas {
+    left: 0;
+    transition: transform 0.7s ease-out;
+}
+
+#imgRelatorioVisitas {
+    right: 0;
+    transition: transform 0.7s ease-out;
+}
+
+#contTelaInicio {
+    max-height: 250px; 
+    overflow: hidden; 
+    perspective: 1000px;
+}
+
+#imgTelaInicio {
+    transform: rotateX(10deg) translateX(25px);
+    transition: transform 0.7s ease-out;
+    width: 80%;
+    display: block;
+    margin: auto;
 }
 /* fim tela inicial */
 
