--- a/index_style.css
+++ b/index_style.css
@@ -103,13 +103,7 @@ body {
     font-weight: 450;
 }
 
-#timeline-horizontal {
-    display: none;
-}
-
-
-
-/* elementos da timeline-nav vertical */
+/* elementos da timeline-nav */
 .node {
     height: 8px;
     width: 8px;
@@ -137,14 +131,16 @@ li .nav-link {
 li .nav-link:hover {
     color: black;
     border: none;
+    margin-left: 2px;
 }
 
 li .nav-link.active {
     color: black;
     border: none;
+    margin-left: 2px;
 }
 
-#tela-recursos li {
+#timeline-nav li {
     list-style: none;
     line-height: 1px;
 }
@@ -156,32 +152,6 @@ li .nav-link.active {
 .ativo { background-color: black; }
 
 .inativo { background-color: #b1b1b1; }
-/* fim elementos navbar */
-
-/* elementos da timeline-nav horizontal */
-#timeline-horizontal .node {
-    height: 8px;
-    width: 8px;
-    border-radius: 50%;
-    display: inline-block;
-    transition: all 1000ms ease;
-}
-
-#timeline-horizontal .divider {
-    height: 2px;
-    width: 50px;
-    margin-left: 3px;
-    transition: all 800ms ease;
-    display: inline-block;
-}
-
-li .nav-link {
-    display:inline;
-    color: #b1b1b1;
-    font-size: 0.9em;
-    font-weight: 700;
-    text-wrap: nowrap;
-}
 /* fim elementos navbar */
 
 /* elementos tabs */
@@ -196,31 +166,65 @@ li .nav-link {
     font-weight: 700; 
     font-size:34px; 
     margin-bottom: 30px; 
-    max-width: 530px;
 }
 
 .tab-pane p {
     margin-bottom: 35px; 
     font-weight: 502; 
     font-size: 15px; 
-    max-width: 480px; 
     word-spacing: 2px;
 }
 
 /* fim elementos tabs */
 
 @media only screen and (max-width: 992px){
-    #timeline-vertical {
-        display: none;
+    #div-nav {
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        width: 100%; 
+        height: 15em;
     }
-    #timeline-horizontal {
+    #timeline-nav {
         display: flex;
+        flex-direction: row;
+        transform: rotate(-90deg);
+        transform-origin: lef-center;
+    }   
+    #timeline-nav .nav-item .nav-link {
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        transform: rotate(90deg);
+        transform-origin: top-left;
+        max-width: 80px;
+        text-wrap: wrap;
+        padding: 0;
+        margin-left: -80px;
+    }
+    #timeline-nav .divider {
+        height: 18vw;
+        margin-bottom: -5px;
+    }
+    #timeline-nav .container-link-node {
+        display: flex;
+        align-items: center;
+        max-height: 8px;
+    }
+    #timeline-nav li {
+        line-height: 20px;
+    }
+    .tab-pane {
+        padding: 0 2em;
     }
    .tab-text {
-    order: 2;
+        order: 2;
    }
    .tab-image {
-    order: 1;
+        order: 1;
+   }
+   .tab-text h2 {
+        font-size: 1.8em;
    }
 }
 
