--- a/index_style.css
+++ b/index_style.css
@@ -72,9 +72,10 @@ body {
 }
 
 #contTelaInicio {
-    max-height: 250px; 
+    height: 300px; 
     overflow: hidden; 
     perspective: 1000px;
+    position: relative;
 }
 
 #imgTelaInicio {
